# AgentManager

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
AgentManager/: README.md
AgentManager/backend/: README.md
AgentManager/backend/app/: __init__.py  dependencies.py  main.py
AgentManager/external_agent/: app.py
AgentManagerNative/: Package.swift  README.md  agent-manager-native
AgentManagerNative/Resources/: AgentManager.icns  Info.plist
Finance Agent/finance_agent/: .env.example  README.md  __init__.py  agent.py  analysis_engine.py  app.py  memory.py  models.py  reporting.py  requirements.txt  risk.py  state.py  tools.py
backend/: README.md  __init__.py
backend/app/: config.py  dependencies.py  main.py
backend/generated_tools/: __init__.py
examples/hello-agent/: README.md  hello.py
external_agent/: Makefile  README.md  pyproject.toml
frontend/: .env.example  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx  styles.css  workspaceLinks.js
managed_agents/: README.md
managed_agents/finance_agent/: .env.example  .gitignore  README.md  analysis_engine.py  app.py  data_loader.py  mcp_server.py  models.py  requirements.txt  supabase_data.py  tools.py  valuation.py
scripts/: dev.py
tests/backend/: conftest.py  test_agent_process.py  test_api.py  test_benchmarks_and_imports.py  test_conversation_routing.py  test_employee_identifiers.py  test_live_agent.py  test_manager_runtime.py  test_openai_provider.py  test_reconciliation.py
(+129 files in other folders)
