[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ai-manager"
version = "0.1.0"
description = "An orchestration layer that introspects, builds, validates, registers, and monitors AI agent tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
  "pydantic>=2.11,<3.0",
  "httpx>=0.28,<1.0",
  "python-dotenv>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.1,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["backend*"]
